tests/errors/assertion-fail-from-fwd.ja
procedure main()
    int x
    from x = 1
    until x = 0
